gccida/c2/grokfield
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/grokfield/src/c-decl.c:6067:47: error: use of undeclared identifier 'decl_context'
v8 = grokdeclarator( declarator, declspecs, ( decl_context)( 4 - ( width == 0LL)), 0); 
                                              ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/grokfield/src/obj/c-decl.o] Error 1
